k8s-manifests/nexus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-tools
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      securityContext:
        fsGroup: 200
      containers:
      - name: nexus
        image: sonatype/nexus3:3.68.1-java11
        ports:
        - containerPort: 8081
        - containerPort: 8082
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "500m"
          limits:
            memory: "3Gi"
            cpu: "2000m"
        volumeMounts:
        - name: nexus-data
          mountPath: /nexus-data
      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: nexus-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: devops-tools
spec:
  selector:
    app: nexus
  ports:
    - name: web-ui
      port: 8081
      targetPort: 8081
    - name: docker-registry
      port: 8082
      targetPort: 8082
